--- a/style.css
+++ b/style.css
@@ -1,9 +1,22 @@
 
-html {
-    font-size: 22px
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+
 }
 
-body   {
-    background: color #333;
-    color: whitesmoke;
-}   
+html{
+    font-size: 10px;
+    font-family: Montserrat, sans-serif;
+}
+a{
+    text-decoration: none;
+}
+.container{
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
