--- a/main.css
+++ b/main.css
@@ -57,6 +57,7 @@ body {
   opacity: 0.7;
   z-index: -1;
 }
+/*min overskrift på home siden*/
 #home h1 {
   display: block;
   width: fit-content;
@@ -64,6 +65,7 @@ body {
   color: whitesmoke;
   margin-top: 400px;
 }
+/*knappen på home siden*/
 #home h2 {
   display: inline-block;
   padding: 10px 30px;
@@ -98,6 +100,23 @@ body {
   grid-area: top;
 }
 
+.left
+{
+  text-align: center;
+ 
+}
+
+.right
+{
+  text-align: center;
+}
+
+.center-bodytext
+{
+  text-align: center;
+}
+
+
 .grid-container
 {
   display: grid;
@@ -111,5 +130,5 @@ body {
 {
   
   margin-top: 100px;
-
+margin-left: 1000px;
 }
