--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+
 }
 
 html {
@@ -18,7 +19,7 @@ a {
 body {
   background-image: url(/imgs/pexels-jessica-lewis-creative-583848.jpg);
   background-repeat: no-repeat;
-  background-size: 100% 1201px;
+  background-size: 100% 1000px;
   z-index: 1;
 }
 .center {
@@ -34,24 +35,26 @@ body {
 }
 
 /* PAGES */
-#home,#about-me
+#home,#about-me,#min-kode
 {
-  height: 1201px;
+  height: 1000px;
   overflow: hidden;
   border: 2px solid black;
 }
 
 
 /* HOME */
-#home {
-  
+#home
+{
+  grid-area: top;
 }
+
 #home::after { /* BLACK COVER */
   content: "";
   position: absolute;
   left: 0;
   top: 0;
-  height: 1201px;
+  height: 1000px;
   width: 100%;
   background-color: black;
   opacity: 0.7;
@@ -79,36 +82,49 @@ body {
   transition: 0.5s ease background-color;
   transition: 0.5s ease color;
 }
+
 #home h2:hover {
   color: whitesmoke;
   background-color: cornflowerblue;
 }
 
+/*min-kode*/
+
+
+/*slideshow container*/
+.slideshow.container
+{
+  width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
 /* ABOUT ME */
 #about-me 
 {
-  background-color:bisque;
+  background-color:rgba(35, 29, 29, 0.877);
   background-image: url(/imgs/about-me.jpg);
   background-repeat: no-repeat;
-  background-size: 50% 1201px;
+  background-size: 50% 1000px;
   z-index: 1;
+  font-size: 130%;
 }
 
 
-#home
-{
-  grid-area: top;
-}
 
 .left
 {
-  text-align: center;
+  text-align: left;
+  
  
 }
 
 .right
 {
-  text-align: center;
+  text-align: left;
+  line-height: 2.5;
+  color:whitesmoke;
+  
 }
 
 .center-bodytext
@@ -116,7 +132,10 @@ body {
   text-align: center;
 }
 
-
+.overtekst
+{
+  color:cornflowerblue;
+}
 .grid-container
 {
   display: grid;
@@ -124,11 +143,15 @@ body {
   ". .";
   grid-gap: 10px;
   padding: 10px;
-  height: 1200px;
+  height: 1000px;
+  
 }
+
 #about-me-text
 {
-  
-  margin-top: 100px;
-margin-left: 1000px;
+  margin-top: 160px;
+  margin-left: 1000px;
 }
+
+
+
