--- a/main.css
+++ b/main.css
@@ -60,6 +60,7 @@ body {
   opacity: 0.7;
   z-index: -1;
 }
+
 /*min overskrift på home siden*/
 #home h1 {
   display: block;
@@ -68,6 +69,7 @@ body {
   color: whitesmoke;
   margin-top: 400px;
 }
+
 /*knappen på home siden*/
 #home h2 {
   display: inline-block;
@@ -92,12 +94,86 @@ body {
 
 
 /*slideshow container*/
-.slideshow.container
-{
-  width: 1000px;
+.slideshow-container {
+  max-width: 1000px;
   position: relative;
   margin: auto;
 }
+
+/* skjul billederne by default */
+.slideshow-main
+{
+  display: none;
+}
+
+/* fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+
+/* frem og tilbage knap mellem billeder */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  color: white;
+  padding: 16px;
+  border-radius: 0 3px 3px 0;
+  margin-top: -22px;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  user-select: none;
+}
+
+/* hvor næste knappen skal være */
+.next
+{
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* hover effeckt */
+.prev:hover, .next:hover
+{
+  background-color: black;
+}
+
+/* titlen */
+.text 
+{
+  color: white;
+  font-size: 15px;
+  position: absolute;
+  padding: 8px 12px;
+  width: 100%;
+  bottom: 8px;
+  text-align: center;
+}
+
+/* side numre */
+.numbertext
+{
+  color: white;
+  font-size: 12px;
+  position: absolute;
+  top: 0;
+  padding: 8px 12px;
+}
+
+
+
+
+
+
 
 /* ABOUT ME */
 #about-me 
@@ -152,6 +228,7 @@ body {
   margin-top: 160px;
   margin-left: 1000px;
 }
+
 
 
 
