--- a/main.css
+++ b/main.css
@@ -32,7 +32,7 @@ body {
 }*/
 
 /* PAGES */
-#home,#about-me,#contact
+#home,#slideshow,#about-me,#contact
 {
   min-height: 1000px;
   overflow: hidden;
@@ -78,9 +78,71 @@ body {
   transition: 0.5s ease color;
 }
 
+
 #home button:hover {
   color: whitesmoke;
   background-color: cornflowerblue;
+}
+
+
+
+#slideshow
+{
+  padding: 32px;
+  background-color:rgba(35, 29, 29, 0.877);
+
+}
+
+.slider-wrapper
+{
+  position: relative;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.slider-wrapper img
+{
+  width: 52%;
+}
+
+
+.slider
+{
+  
+  display: flex;
+  aspect-ratio: 16 / 9;
+  overflow-x: hidden;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  border-radius: 4px;
+}
+
+.slider img
+{
+  float: 1 0 100%;
+  scroll-snap-align: start;
+  object-fit: cover;
+}
+
+.slider-nav
+{
+  display: flex;
+  column-gap: 16px;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translate(-50%);
+  z-index: 1;
+}
+
+.slider-nav a
+{
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background-color: whitesmoke;
+  opacity: 0.75;
+  transition: ease 250ms;
 }
 
 
