--- a/aboutme.css
+++ b/aboutme.css
@@ -1,25 +1,71 @@
-/*
-* {
-  background-color: aqua;
+*
+{
+  padding: 0;
+  margin: 0;
 }
 
-html {
+a
+{
+  text-decoration: none;
+}
+
+html
+{
+  font-family: Montserrat, sans-serif;
+  background-color:rgba(35, 29, 29, 0.877);
   scroll-behavior: smooth;
 }
 
-#numbers {
+/* NAVIGATIONBAR */
+.navigationbar
+{
+  padding: 10px;
+  width: 100%;
+  background-color:transparent;
+  position: fixed;
+  top: 0;
+  text-align: center;
+  z-index: 2;
 }
 
-#one,
-#two {
-  height: 1200px;
-  border: 2px solid black;
+.navigationbar a
+{
+  color: cornflowerblue;
+  text-align: center;
+  padding: 15px 15px;
+  font-size: 25px;
 }
 
-#one {
+.navigationbar a:hover
+{
+  text-decoration: underline;
 }
 
-#one img {
-  width: 500px;
+.projekt-box
+{
+  width: 600px;
+  border-radius: 25px;
+  margin-top: 5%;
+  padding: 20px 60px;
+  margin-left: 33%;
+  display: inline-block;
+  transition: .2s;
+  color: whitesmoke;
+  background-color: rgba(13, 13, 13, 0.586);
 }
-*/
+
+.projekt-title
+{
+  text-align: center;
+  margin-top: 90px;
+  font-size: 40px;
+  color: whitesmoke;
+}
+
+.projekt-img
+{
+  max-width: 350px;
+  margin-top: 200px;
+  margin-left: 100px;
+
+}
