--- a/aboutme.css
+++ b/aboutme.css
@@ -30,7 +30,7 @@ html
 
 .navigationbar a
 {
-  color: cornflowerblue;
+  color: whitesmoke;
   text-align: center;
   padding: 15px 15px;
   font-size: 25px;
@@ -39,6 +39,14 @@ html
 .navigationbar a:hover
 {
   text-decoration: underline;
+}
+
+.projekt-title
+{
+  margin-left: 45%;
+  padding-top: 80px;
+  font-size: 60px;
+  color: cornflowerblue;
 }
 
 .projekt-box
@@ -54,18 +62,26 @@ html
   background-color: rgba(13, 13, 13, 0.586);
 }
 
-.projekt-title
+.projekt-box:hover
 {
-  text-align: center;
-  margin-top: 90px;
-  font-size: 40px;
-  color: whitesmoke;
+  transform: scale(1.2); 
+}
+
+.projekt-text
+{
+  clear: right;
+  margin-top: 5%;
+  font-size: 30px;
 }
 
 .projekt-img
 {
-  max-width: 350px;
-  margin-top: 200px;
-  margin-left: 100px;
-
+  float: left;
+  text-align: left;
+  margin-right: 20px;
+  width: 120px;
 }
+
+
+
+
